# lemurs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml  flake.nix  install.sh
.github/workflows/: check.yaml  release.yml  rust.yml
chvt/: Cargo.toml
doc/: internals.md
env-container/: Cargo.toml
env-container/src/: lib.rs
env_container/: Cargo.toml
env_container/src/: lib.rs
extra/: config.toml  lemurs.openrc  lemurs.pam  lemurs.service  lemurs.sysv
extra/s6/: finish  run
lemurs-core/: Cargo.toml
lemurs-core/examples/: login.rs
lemurs-core/src/: lib.rs
lemurs-core/src/auth/: mod.rs  pam.rs  utmpx.rs
lemurs-core/src/post_login/: mod.rs  x.rs
lemurs-core/src/session_environment/: env_variables.rs  mod.rs  wayland.rs  x11.rs
lemurs-tui/: Cargo.toml
lemurs-tui/src/: config.rs  env_container.rs  info_caching.rs  main.rs
lemurs-tui/src/auth/: mod.rs
lemurs-tui/src/post_login/: env_variables.rs  mod.rs  x.rs
lemurs-tui/src/ui/: input_field.rs  mod.rs  power_menu.rs  status_message.rs  switcher.rs
services/: lemurs  lemurs.service
src/: chvt.rs  cli.rs  config.rs  env_container.rs  environment.rs  info_caching.rs  initrcs.rs  input_field.rs  main.rs  pam.rs  window_manager_selector.rs
src/auth/: mod.rs  pam.rs  utmpx.rs
src/graphical_environments/: mod.rs  x.rs
src/post_login/: env_variables.rs  mod.rs  wait_with_log.rs  x.rs
src/ui/: background.rs  chunks.rs  input_field.rs  key_menu.rs  mod.rs  panel.rs  power_menu.rs  status_message.rs  switcher.rs  window_manager_selector.rs
tests/: able-to-login.nix  graphical-sway-login.nix  graphical-x11-login.nix  relogin.nix  terminate-session.nix
utmpx/: Cargo.toml
