[package]
name = "lemurs"
authors = ["Gijs Burghoorn <me@gburghoorn.com>"]
description = "A TUI Display/Login Manager"
version = "0.3.0"

edition = "2021"

categories = ["gui", "authentication"]
keywords = ["display", "login", "desktop"]

repository = "https://github.com/coastalwhite/lemurs"
homepage = "https://github.com/coastalwhite/lemurs"

readme = "README.md"
license = "MIT or APACHE"

[dependencies]
# UI and TUI interface
tui = { version = "0.16.0", features = [ "crossterm" ] }
unicode-width = "0.1"
crossterm = { version = "0.22" }

# Parsing cached information
lazy_static = "1.4.0"
regex = "1.5"

# Interacting with the kernel interfaces
rand = "0.8.4"
nix = "0.23.1"

# UTMPX
libc = "0.2"

# Switching TTYs
chvt = "0.2.0"

# Authentication and Fetching User Data
pam = "0.7.0"
pgs-files = "0.0.7"
users = "0.11.0"

# Logging
log = "0.4.0"
fern = "0.5.2"
chrono = "0.4"

# Configuration File Parsing
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3" # Colors
