[package]
name = "lemurs"
authors = ["Gijs Burghoorn <me@gburghoorn.com>"]
description = "A TUI Display/Login Manager"
version = "0.3.1"

edition = "2021"

categories = ["gui", "authentication"]
keywords = ["display", "login", "desktop"]

repository = "https://github.com/coastalwhite/lemurs"
homepage = "https://github.com/coastalwhite/lemurs"

readme = "README.md"
license = "MIT or APACHE"

[dependencies]
# UI and TUI interface
ratatui = "0.21.0"
crossterm = "0.26"
unicode-width = "0.1"

mio = { version = "0.8.8", features = [ "os-poll", "os-ext" ] }

# Interacting with the kernel interfaces
rand = "0.8.4"
nix = "0.23.1"

# UTMPX
libc = "0.2"

# Authentication and Fetching User Data
pam = "0.7.0"
pgs-files = "0.0.7"
users = "0.11.0"

# Once Cell
once_cell = "1.17.1"

# Logging
env_logger = { version = "0.9.0", default-features = false, features = ["humantime"] }
log = "0.4.0"

# Configuration File Parsing
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
