[package]
name = "lemurs"
authors = ["Gijs Burghoorn <me@gburghoorn.com>"]
description = "A TUI Display/Login Manager"
version = "0.3.0"

edition = "2021"

categories = ["gui", "authentication"]
keywords = ["display", "login", "desktop"]

repository = "https://github.com/coastalwhite/lemurs"
homepage = "https://github.com/coastalwhite/lemurs"

readme = "README.md"
license = "MIT or APACHE"

[dependencies]
# Interacting with the kernel interfaces
rand = "0.8.4"
nix = "0.23.1"

# Switching between TTYs
chvt-rs = { path = "../chvt" }

# UTMPX
libc = "0.2"

# Authentication and Fetching User Data
pam = "0.7.0"
pgs-files = "0.0.7"
users = "0.11.0"

# Logging
log = { version = "0.4.0", optional = true }

[features]
default = ["x11", "wayland", "tty", "sessions-fetch", "utmp", "logging"]

x11 = []
wayland = []
tty = []
sessions-fetch = []
logging = ["log"]
utmp = []
