[package]
name = "lemurs"
authors = ["Gijs Burghoorn <me@gburghoorn.com>"]
description = "A TUI Display/Login Manager"
version = "0.3.1"

edition = "2021"

categories = ["gui", "authentication"]
keywords = ["display", "login", "desktop"]

repository = "https://github.com/coastalwhite/lemurs"
homepage = "https://github.com/coastalwhite/lemurs"

readme = "README.md"
license = "MIT or APACHE"

[dependencies]
chvt.path = "../chvt"
env_container.path = "../env_container"

# UI and TUI interface
tui = { version = "0.16.0", features = [ "crossterm" ] }
unicode-width = "0.1"
crossterm = { version = "0.22" }

# Interacting with the kernel interfaces
rand = "0.8.4"
nix.workspace = true

# UTMPX
libc.workspace = true

# Authentication and Fetching User Data
pam = "0.7.0"
pgs-files = "0.0.7"
users = "0.11.0"

# Once Cell
once_cell = "1.17.1"

# Logging
env_logger = { version = "0.9.0", default-features = false }
log.workspace = true

# Configuration File Parsing
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
