[package]
name = "lemurs-tui"
authors = ["Gijs Burghoorn <me@gburghoorn.com>"]
description = "A TUI Display/Login Manager"
version = "0.3.1"

edition = "2021"

categories = ["gui", "authentication"]
keywords = ["display", "login", "desktop"]

repository = "https://github.com/coastalwhite/lemurs"
homepage = "https://github.com/coastalwhite/lemurs"

readme = "README.md"
license = "MIT or APACHE"

[dependencies]
chvt.path = "../chvt"
lemurs_core = { package = "lemurs", path = "../lemurs-core" }

# UI and TUI interface
tui = { version = "0.16.0", features = [ "crossterm" ] }
unicode-width = "0.1"
crossterm = { version = "0.22" }

# Logging
env_logger = { version = "0.9.0", default-features = false }
log.workspace = true
users.workspace = true

# Configuration File Parsing
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
